[package]
name = "codex-relay"
version = "0.1.0"
edition = "2021"
description = "Responses API ↔ Chat Completions translation bridge for Codex CLI"
license = "MIT"
repository = "https://github.com/MetaFARS/codex-relay"
keywords = ["codex", "openai", "llm", "proxy", "relay"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "codex-relay"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
bytes = "1"
pin-project-lite = "0.2"
eventsource-stream = "0.2"
async-stream = "0.3"
tokio-stream = "0.1"
